Code header and main part for html file

--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
   </head>
   <body>
     <div>
-      <header></header>
+      <header>
+        <div class="logo">
+          <h2>Header Logo</h2>
+        </div>
 
-      <main></main>
+        <nav>
+          <a href="">My resume</a>
+          <a href="">About me</a>
+          <a href="">Portfolio</a>
+        </nav>
+      </header>
+
+      <main>
+        <section>
+          <div>
+            <h1>Let me introduce you my portfolio website</h1>
+          </div>
+        </section>
+      </main>
 
       <footer></footer>
     </div>
