finish globaly all my html structure with all the section needed

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <div>
+      <!-- header have logo and links to navigate in bewsite, horizontaly -->
       <header>
+        <!-- Companies logo -->
         <div class="logo">
-          <h2>Header Logo</h2>
+          <h3>Header Logo</h3>
         </div>
 
+        <!-- Links for navigation on the website -->
         <nav>
           <a href="">My resume</a>
           <a href="">About me</a>
@@ -20,15 +23,70 @@
         </nav>
       </header>
 
+      <!-- main section have 4 subsections in order respectively short intro, random informations, a quote, a form part  -->
       <main>
+        <!-- first main's section with horizontaly organisation of the two parts short intro and placehorder -->
         <section>
+          <!-- Short intro to welcome the visitors -->
           <div>
-            <h1>Let me introduce you my portfolio website</h1>
+            <h1>Welcome to Uhama.com, my portfolio's website</h1>
+            <p>
+              This website is a project in constant evolution, it evolves
+              related to my coding abilities as fullstack web developer. Enjoy
+              your visit and contact me if you need for a project.
+            </p>
           </div>
+
+          <!-- placeholder for an image next -->
+          <div>
+            <img src="" alt="" />
+          </div>
+        </section>
+
+        <!-- second section of main's section, random information, with (4 img) project's pictures with short description on its bellow  -->
+        <section>
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+        </section>
+
+        <!-- Third section of main's section, quote'section (at the end it's should generate randome quotes, but to start there will have only one quote of my favorite quotes) -->
+        <section>
+          <!-- italic -->
+          <p>
+            A quote about the way it's necessary to embrace the struggle and the
+            mistake.
+          </p>
+          <!-- right bellow of the quote, bold and font-size shorter than the quote -->
+          <p>author's name</p>
+        </section>
+
+        <!-- fourth section, a form section to send me request for a job -->
+        <section>
+          <form action=""></form>
         </section>
       </main>
 
-      <footer></footer>
+      <!-- footer section, where there contact informations and /logo/links and phonenumber -->
+      <footer>
+        <!-- imge linkedin -->
+        <a href="">
+          <img src="" alt="" />
+        </a>
+        <!-- img facebook -->
+        <a href="">
+          <img src="" alt="" />
+        </a>
+        <!-- img instagram -->
+        <a href="">
+          <img src="" alt="" />
+        </a>
+        <!-- img twitter -->
+        <a href="">
+          <img src="" alt="" />
+        </a>
+      </footer>
     </div>
   </body>
 </html>
