organize the webpage structure with grid

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
+    <div id="webpage">
       <!-- header have logo and links to navigate in bewsite, horizontaly -->
       <header>
         <!-- Companies logo -->
