complete global strucure of html, organize with css the main sections of page and add logo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
       <!-- header have logo and links to navigate in bewsite, horizontaly -->
       <header>
         <!-- Companies logo -->
-        <div class="logo">
-          <h3>Header Logo</h3>
+        <div class="logo-container">
+          <img
+            class="logo"
+            src="./images/logo.jpg"
+            alt="Companie's logo"
+            width="80"
+            height="80"
+          />
         </div>
 
         <!-- Links for navigation on the website -->
