add and style placeholder image

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <!-- main section have 4 subsections in order respectively short intro, random informations, a quote, a form part  -->
       <main>
         <!-- first main's section with horizontaly organisation of the two parts short intro and placehorder -->
-        <section>
+        <section class="intro-placeholder-container">
           <!-- Short intro to welcome the visitors -->
-          <div>
+          <div class="intro">
             <h1>Welcome to Uhama.com, my portfolio's website</h1>
             <p>
               This website is a project in constant evolution, it evolves
@@ -43,9 +43,15 @@
             </p>
           </div>
 
-          <!-- placeholder for an image next -->
-          <div>
-            <img src="" alt="" />
+          <!-- Companie's placeholder -->
+          <div class="placeholder">
+            <img
+              class="placeholder-img"
+              src="./images/placeholder.jpg"
+              alt="placeholder of the company"
+              width="90%"
+              height="90%"
+            />
           </div>
         </section>
 
