change the logo and use padding to improve the presentation's frame of the page's element

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
 
         <!-- second section of main's section, random information, with (4 img) project's pictures with short description on its bellow  -->
-        <section>
+        <section class="random-info">
           <img src="" alt="" />
           <img src="" alt="" />
           <img src="" alt="" />
@@ -64,7 +64,7 @@
         </section>
 
         <!-- Third section of main's section, quote'section (at the end it's should generate randome quotes, but to start there will have only one quote of my favorite quotes) -->
-        <section>
+        <section class="quote">
           <!-- italic -->
           <p>
             A quote about the way it's necessary to embrace the struggle and the
@@ -75,29 +75,31 @@
         </section>
 
         <!-- fourth section, a form section to send me request for a job -->
-        <section>
+        <section class="form">
           <form action=""></form>
         </section>
       </main>
 
       <!-- footer section, where there contact informations and /logo/links and phonenumber -->
       <footer>
-        <!-- imge linkedin -->
-        <a href="">
-          <img src="" alt="" />
-        </a>
-        <!-- img facebook -->
-        <a href="">
-          <img src="" alt="" />
-        </a>
-        <!-- img instagram -->
-        <a href="">
-          <img src="" alt="" />
-        </a>
-        <!-- img twitter -->
-        <a href="">
-          <img src="" alt="" />
-        </a>
+        <div class="container-contact">
+          <!-- imge linkedin -->
+          <a href="">
+            <img src="" alt="" />
+          </a>
+          <!-- img facebook -->
+          <a href="">
+            <img src="" alt="" />
+          </a>
+          <!-- img instagram -->
+          <a href="">
+            <img src="" alt="" />
+          </a>
+          <!-- img twitter -->
+          <a href="">
+            <img src="" alt="" />
+          </a>
+        </div>
       </footer>
     </div>
   </body>
