--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
@@ -16,16 +22,16 @@
             class="logo"
             src="./images/logo.jpg"
             alt="Companie's logo"
-            width="80"
-            height="80"
+            width="60"
+            height="60"
           />
         </div>
 
         <!-- Links for navigation on the website -->
         <nav>
-          <a href="">My resume</a>
-          <a href="">About me</a>
-          <a href="">Portfolio</a>
+          <a class="header-link" href="">My resume</a>
+          <a class="header-link" href="">About me</a>
+          <a class="header-link" href="">Portfolio</a>
         </nav>
       </header>
 
