started create the form and I need to fix the form's color

--- a/index.html
+++ b/index.html
@@ -62,27 +62,58 @@
         </section>
 
         <!-- second section of main's section, random information, with (4 img) project's pictures with short description on its bellow  -->
-        <section class="random-info">
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
+        <section class="info-container">
+          <div class="img-text-container">
+            <div class="info-item">
+              <a href=""><img src="" alt="" /></a>
+            </div>
+            <p>project's description</p>
+          </div>
+          <div class="img-text-container">
+            <div class="info-item">
+              <a href=""><img src="" alt="" /></a>
+            </div>
+            <p>project's description</p>
+          </div>
+          <div class="img-text-container">
+            <div class="info-item">
+              <a href=""><img src="" alt="" /></a>
+            </div>
+            <p>project's description</p>
+          </div>
+          <div class="img-text-container">
+            <div class="info-item">
+              <a href=""><img src="" alt="" /></a>
+            </div>
+            <p>project's description</p>
+          </div>
         </section>
 
         <!-- Third section of main's section, quote'section (at the end it's should generate randome quotes, but to start there will have only one quote of my favorite quotes) -->
-        <section class="quote">
+        <section class="quote-section">
           <!-- italic -->
-          <p>
+          <p class="quote-p">
             A quote about the way it's necessary to embrace the struggle and the
             mistake.
           </p>
           <!-- right bellow of the quote, bold and font-size shorter than the quote -->
-          <p>author's name</p>
+          <p class="quote-author">-author's name</p>
         </section>
 
         <!-- fourth section, a form section to send me request for a job -->
         <section class="form">
-          <form action=""></form>
+          <!-- need input: first name, last name, mail, text field, submit button-->
+          <caption>
+            Complete the form
+          </caption>
+          <form action="">
+            <label for="fname">First name: </label
+            ><input type="text" id="fname" name="fname" />
+            <label for="lname">Last name: </label
+            ><input type="text" id="lname" name="lname" />
+            <label for="request">Request: </label
+            ><input type="text" id="request" name="request" />
+          </form>
         </section>
       </main>
 
