add social media linked-logo, user can click on logo to access on my different social medias account

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
             ><input type="text" id="fname" name="fname" />
             <label for="lname">Last name: </label
             ><input type="text" id="lname" name="lname" />
+            <label for="mail">Mail: </label
+            ><input type="email" id="mail" name="mail" />
             <label for="request">Request: </label
             ><input type="text" id="request" name="request" />
           </form>
@@ -121,21 +123,49 @@
       <footer>
         <div class="container-contact">
           <!-- imge linkedin -->
-          <a href="">
-            <img src="" alt="" />
-          </a>
+          <div class="contact-item">
+            <a href="">
+              <img
+                src="./images/linkedin_logo.jpg"
+                alt="Linkedin logo"
+                height="60px"
+                width="60px"
+              />
+            </a>
+          </div>
           <!-- img facebook -->
-          <a href="">
-            <img src="" alt="" />
-          </a>
+          <div class="contact-item">
+            <a href="">
+              <img
+                src="./images/facebook_logo.jpg"
+                alt="Facebook logo"
+                height="60px"
+                width="60px"
+              />
+            </a>
+          </div>
           <!-- img instagram -->
-          <a href="">
-            <img src="" alt="" />
-          </a>
-          <!-- img twitter -->
-          <a href="">
-            <img src="" alt="" />
-          </a>
+          <div class="contact-item">
+            <a href="">
+              <img
+                src="./images/instagram_logo.jpg"
+                alt="Instagram logo"
+                height="60px"
+                width="60px"
+              />
+            </a>
+          </div>
+          <!-- img X logo -->
+          <div class="contact-item">
+            <a href="">
+              <img
+                src="./images/x_logo.jpg"
+                alt="X logo"
+                height="60px"
+                width="60px"
+              />
+            </a>
+          </div>
         </div>
       </footer>
     </div>
